<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="unknown" translatable="false">unknown</string>
    <string name="no_birthdays">No birthdays</string>
    <string name="access_contacts">To show upcoming birthdays, TKBirthdayReminder needs to access your contacts.</string>
    <string name="missing_permission">Missing permission</string>
    <string name="request">Request</string>

    <string name="app_name">Birthdays</string>
    <string name="content_description_image">An image</string>

    <string name="settings">Settings</string>
    <string name="display_options">Display Options</string>
    <string name="title_show_astrological_signs">Show Astrological Signs</string>
    <string name="widget_opacity">Opacity</string>
    <string name="int_slash_int" translatable="false">%1$d / %2$d</string>
    <string name="widget_appearance">Widget Appearance</string>
    <string name="hide_past_birthdays">Hide Past Birthdays</string>
    <string name="notifications">Notifications</string>
    <string name="notification_sound">Notification Sound</string>
    <string name="notification_settings">Notification settings</string>
    <string name="notification_channel_name">Upcoming birthdays</string>
    <string name="notification_sound_insistent">Repeat notification sound</string>
    <string name="show_three_columns">Show three columns on large screens</string>
    <string name="show_cards_on_small_screens">Show cards on small screens</string>

    <string name="aries">Aries</string>
    <string name="taurus">Taurus</string>
    <string name="gemini">Gemini</string>
    <string name="cancer">Cancer</string>
    <string name="leo">Leo</string>
    <string name="virgo">Virgo</string>
    <string name="libra">Libra</string>
    <string name="scorpius">Scorpio</string>
    <string name="sagittarius">Sagittarius</string>
    <string name="capricornus">Capricorn</string>
    <string name="aquarius">Aquarius</string>
    <string name="pisces">Pisces</string>

    <string name="year_of_birth">Year of birth</string>
    <string name="birthday_no_year" translatable="false">%1$s (%2$s)</string>
    <string name="no_birthday_set">no birthday set</string>
    <string name="yesterday">yesterday</string>
    <string name="today">today</string>
    <string name="tomorrow">tomorrow</string>
    <string name="in_n_days">in %d days</string>
    <string name="n_days_ago">%d days ago</string>
    <string name="present_and_future">turns %1$d %2$s (%3$s)</string>
    <string name="past">turned %1$d %2$s (%3$s)</string>
    <string name="legal">Legal</string>
    <string name="alert_dialog_continue">Continue</string>
    <string name="alert_dialog_abort">Abort</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="month_and_day">MMM dd</string>

    <string name="new_entry_dialog_date">Birthday Date</string>

    <string name="menu_set_date">Set Birthday Date</string>
    <string name="menu_change_date">Change Birthday Date</string>
    <string name="menu_remove_date">Remove Birthday Date</string>
    <string name="menu_dial">Call Contact</string>
    <string name="menu_send_sms">SMS to %1$s</string>
    <string name="notification_time">Notification Time</string>
    <string name="notification_days">Additional Notification Days</string>
    <string name="menu_new_entry">New Contact</string>
    <string name="days_7">7 days</string>
    <string name="days_6">6 days</string>
    <string name="days_5">5 days</string>
    <string name="days_4">4 days</string>
    <string name="days_3">3 days</string>
    <string name="days_2">2 days</string>
    <string name="days_1">1 days</string>
    <string name="next_notification">Next check for due birthdays on %1$s at %2$s</string>
    <string name="and_x_more">" and %1$d more"</string>
    <string name="x_more_birthdays">%1$d more birthdays</string>

    <string name="activity_not_found">No activity found</string>

    <string name="check_notification_settings">Notifications are off or silent. Please check Notification settings, or hide this message.</string>
    <string name="check">Check</string>

    <string name="check_alarm_settings">To let TKBirthdayReminder notify you of upcoming birthdays, please allow setting Alarms and reminders, or hide this message.</string>
    <string name="hide_message">hide this message</string>
    <string name="alarms_are_off">Setting alarms and reminders currently not allowed</string>>

    <string name="accounts">Accounts</string>

    <string name="welcome_text" translatable="false">Welcome to <b>TKBirthdayReminder</b>.
If you have questions about this app, or if you think you have found a bug,
please contact me by sending an email to mail@tkuenneth.dev.
\n\nBy using TKBirthdayReminder, you accept both the following privacy policy
and the terms of use.
\n\n<b>Privacy Policy</b>\nThis privacy policy contains information
about how TKBirthdayReminder handles user data. We do not sell or let
any other third parties use your data. The app contains no advertisements.
\n\nWhen you send an email to the TKBirthdayReminder support, we keep a record of
our communication until the support case is closed. This includes your email,
name and the conversation history. This is the only personal information we
temporarily store. When the support case is closed the records are deleted.
\n\nTo fulfill its purpose, the app must access user account data and the
contacts database. Besides editing, grouping and displaying birthday-related information
TKBirthdayReminder does not process the data any further. Specifically it does
not send the data to third party servers.\nPlease be aware that TKBirthdayReminder
relies on other services, specifically core Google Android Platform services, the Google
Contacts API, Google Calendar API and Google Tasks API. How and what data these
services process may not be controllable by TKBirthdayReminder. You can find their
privacy policy here: https://policies.google.com/privacy.
\n\n<b>Terms of use</b>\nThis program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.\nThe author may not be held responsible
for any problems caused by using this program. You use <b>TKBirthdayReminder</b> completely
at your own risk.
	</string>

</resources>
