<?xml version="1.0" encoding="utf-8"?>

<!--
	notification_days.xml
	TKBirthdayReminder (c) Thomas Künneth 2009 - 2017
	Alle Rechte beim Autoren. All rights reserved.
-->

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TableRow>

        <CheckBox
            android:id="@+id/days_7"
            android:text="@string/days_7" />

        <CheckBox
            android:id="@+id/days_6"
            android:text="@string/days_6" />
    </TableRow>

    <TableRow>

        <CheckBox
            android:id="@+id/days_5"
            android:text="@string/days_5" />

        <CheckBox
            android:id="@+id/days_4"
            android:text="@string/days_4" />
    </TableRow>

    <TableRow>

        <CheckBox
            android:id="@+id/days_3"
            android:text="@string/days_3" />

        <CheckBox
            android:id="@+id/days_2"
            android:text="@string/days_2" />
    </TableRow>

    <TableRow>

        <CheckBox
            android:id="@+id/days_1"
            android:text="@string/days_1" />
    </TableRow>

</TableLayout>
