<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">
 
    <PreferenceCategory
            android:title="@string/display_options">
            
        <CheckBoxPreference
                android:key="checkbox_show_astrological_signs"
                android:defaultValue="true"
                android:title="@string/title_show_astrological_signs" />
        
		<com.thomaskuenneth.android.birthday.WidgetPreference
			android:title="@string/widget_appearance"
			android:dialogTitle="@string/widget_appearance"
		/>
        <CheckBoxPreference
                android:key="hide_past_birthdays"
                android:defaultValue="false"
                android:title="@string/hide_past_birthdays" />
        		            
    </PreferenceCategory>
     
</PreferenceScreen>
